Adjusted the sizing of the objects, added additional classes for better manupilation, overhauled the styling, chnaged the red shade, added a shape behind the vehicles, fixed the police vehicle size, added a dot grid infront of the background and implemented a whole responsive design.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -134,26 +134,7 @@ nav {
     /* background-size: 40px 40px;
     background-image:
     linear-gradient(to right, grey 1px, transparent 1px),
-    linear-gradient(to bottom, grey 1px, transparent 1px); */
-    /* background:
-    linear-gradient(-90deg, rgba(0,0,0,.05) 1px, transparent 1px),
-    linear-gradient(rgba(0,0,0,.05) 1px, transparent 1px), 
-    linear-gradient(-90deg, rgba(0, 0, 0, .04) 1px, transparent 1px),
-    linear-gradient(rgba(0,0,0,.04) 1px, transparent 1px),
-    linear-gradient(transparent 3px, #f2f2f2 3px, #f2f2f2 78px, transparent 78px),
-    linear-gradient(-90deg, #aaa 1px, transparent 1px),
-    linear-gradient(-90deg, transparent 3px, #f2f2f2 3px, #f2f2f2 78px, transparent 78px),
-    linear-gradient(#aaa 1px, transparent 1px),
-    #f2f2f2;
-    background-size:
-    4px 4px,
-    4px 4px,
-    80px 80px,
-    80px 80px,
-    80px 80px,
-    80px 80px,
-    80px 80px,
-    80px 80px; */
+    linear-gradient(to bottom, grey 1px, transparent 1px); */    
     background-size: 40px 40px;
     background-image: radial-gradient(circle, #ffffff 1px, rgba(255, 255, 255, 0) 1px);
     width: 100%;
